# cryptolayer-base

./: .gitignore  README.md  arch.drawio  base_module.py  config.py  crypto-layer.py  crypto_layer.py  listener.py  module_manager.py  packet.py  pyproject.toml  requirements.txt  sender.py  wordcoder.py
.github/workflows/: release.yml
docs/: README.md  arch.drawio  how-it-works-small.drawio  how-looks-data-transfer.drawio
docs/diagrams/src/: ack-receive-packet.drawio  arch.drawio  how-it-works-small.drawio  how-looks-data-transfer.drawio  init.drawio  message-transmission-chain.drawio  net-levels.drawio  packet-structures.drawio
levels/: application.py  base.py  packet.py  presentation.py  transitional.py  transport.py
messengers/Telegram/: main.py
messengers/Test/: main.py
modules/: base.py
modules/Test/: main.py
modules/VK/: main.py
modules/test/: test.py
src/: UIProvider.py  config.py  crypto_layer.py  module_manager.py  wordcoder.py
src/levels/: application.py  base.py  packet.py  presentation.py  transitional.py  transport.py
src/modules/: base.py
src/modules/Test/: main.py
src/modules/VK/: main.py
src/modules/VK_group/: main.py
