[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptolayer"
version = "1.0.0"
description = "Cryptographic layer for messengers"
dependencies = [
    "prompt_toolkit",
    "vk_api",
    "colorama",
    "rich",
    "cryptography",
    "cryptolayer-module-interface @ git+https://github.com/igmunv/cryptolayer-module-interface.git"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
